updates to modal syntax.

--- a/apps/administrator/templates/administrator/base.html
+++ b/apps/administrator/templates/administrator/base.html
@@ -29,7 +29,7 @@
   <body {% block extra_body %}{% endblock extra_body %}>
 <div class="modal hide fade" id="myModal">
     <div class="modal-header">
-      <a data-dismiss="modal" class="close">×</a>
+      <button type="button" data-dismiss="modal" class="close">×</button>
       <h3>Add Photos</h3>
     </div>
     <div class="modal-body">
