--- a/apps/administrator/templates/administrator/utilities.html
+++ b/apps/administrator/templates/administrator/utilities.html
@@ -9,7 +9,7 @@
 {% block main_content %}
 <div class="modal hide fade" id="deleteThumbnails">
     <div class="modal-header">
-      <a data-dismiss="modal" class="close">×</a>
+      <button type="button" data-dismiss="modal" class="close">×</button>
       <h3>Are You Sure?</h3>
     </div>
     <div class="modal-body">
