--- a/apps/administrator/templates/administrator/locations.html
+++ b/apps/administrator/templates/administrator/locations.html
@@ -83,7 +83,7 @@ rules: [
 {% block main_content %}
 <div class="modal hide fade" id="addLocation">
     <div class="modal-header">
-      <a data-dismiss="modal" class="close">×</a>
+      <button type="button" data-dismiss="modal" class="close">×</button>
       <h3>Add Location</h3>
     </div>
     <div class="modal-body">
