--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
-{% extends "twitter/base.html" %}
+{% extends "default/base.html" %}
 {% block nav %}
-{% include "twitter/nav.html" with current=1 %}
+{% include "default/nav.html" with current=1 %}
 {% endblock nav %}
 {% block main_content %}
 
