--- a/apps/administrator/templates/administrator/base.html
+++ b/apps/administrator/templates/administrator/base.html
@@ -99,7 +99,7 @@
     {% for message in messages %}
         <div class="alert alert-success">
           <a class="close" data-dismiss="alert">×</a>
-          <h4 class="alert-heading">Warning!</h4>
+          <h4 class="alert-heading">{{ message.tags }}</h4>
           <p>{{ message }}</p>
         </div>
         {% endfor %}
