--- a/themes/default/templates/default/base.html
+++ b/themes/default/templates/default/base.html
@@ -31,6 +31,15 @@
 
     <div class="container">
 		<div class="row">
+            {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-success">
+                <a class="close" data-dismiss="alert">×</a>
+                <h4 class="alert-heading">{{ message.tags }}</h4>
+                <p>{{ message }}</p>
+            </div>
+            {% endfor %}
+            {% endif %}
 			{% block main_content %}{% endblock main_content %}
 		</div>
         <footer class="footer">
