--- a/fotochest/administrator/templates/administrator/add_location.html
+++ b/fotochest/administrator/templates/administrator/add_location.html
@@ -13,7 +13,7 @@
 <div class="page-header">
 <h2>Add Location</h2>
 </div>
-<form method="POST" action=".">{% csrf_token %} 
+<form method="POST" action="">{% csrf_token %}
 {{ form }}
     <div class="form-actions">
         <input class="btn btn-primary" type="submit" value="Add Location">
