--- a/fotochest/administrator/templates/administrator/locations.html
+++ b/fotochest/administrator/templates/administrator/locations.html
@@ -88,7 +88,7 @@ rules: [
     </div>
     <div class="modal-body">
       <h4>Add New Location</h4>
-      <form method="POST" action=".">{% csrf_token %}
+      <form method="POST" action="">{% csrf_token %}
       {{ form }}
       
     </div>
