--- a/fotochest/administrator/templates/administrator/albums.html
+++ b/fotochest/administrator/templates/administrator/albums.html
@@ -14,7 +14,7 @@
     </div>
     <div class="modal-body">
       <h4>Add a New Photo Album</h4>
-      <form method="POST" action=".">
+      <form method="POST" action="">
       {% csrf_token %}
       <label>Title</label>
       <input type="text" name="title" class="span5">
