--- a/fotochest/administrator/templates/administrator/settings.html
+++ b/fotochest/administrator/templates/administrator/settings.html
@@ -10,7 +10,7 @@
 <div class="page-header">
 <h2>Settings</h2>
 </div>
-<form method="POST" action=".">{% csrf_token %} 
+<form method="POST" action="">{% csrf_token %}
 {{ form }}
     <div class="form-actions">
         <input class="btn btn-primary" type="submit" value="Save Settings">
