--- a/fotochest/photo_manager/templates/photo_manager/map.html
+++ b/fotochest/photo_manager/templates/photo_manager/map.html
@@ -1,9 +1,9 @@
-{% extends "default/base.html" %}
+{% extends "photo_manager/base.html" %}
 {% block extra_html %}style="height: 100%"{% endblock %}
 {% block title %}Map{% endblock %}
 
 {% block nav %}
-{% include "default/nav.html" with current=3 %}
+{% include "photo_manager/nav.html" with current=3 %}
 {% endblock nav %}
 {% block extra_head %}
 {% load location_tags %}
