--- a/fotochest/administrator/templates/administrator/dashboard.html
+++ b/fotochest/administrator/templates/administrator/dashboard.html
@@ -29,7 +29,7 @@ $(document).ready(function () {
 <h2>Recent Uploads</h2>
 </div>
 
-{% for photo in photos.object_list %}
+{% for photo in photos %}
 {% if forloop.counter == 1 or forloop.counter == 5 or forloop.counter == 9 or forloop.counter == 13 %}
 <ul class="thumbnails row">
 {% endif %}
@@ -113,7 +113,7 @@ $(document).ready(function () {
     </ul>
     {% endif %}
 {% endfor %}
-
+{% if paginated %}
 <div class="pagination">
     <ul>
         {% if photos.has_previous %}
@@ -133,7 +133,7 @@ $(document).ready(function () {
         {% endif %}
     </ul>
 </div>
-
+{% endif %}
 
 {% endblock main_content %}
 
