--- a/fotochest/administrator/static/administrator/css/added.css
+++ b/fotochest/administrator/static/administrator/css/added.css
@@ -1,3 +1,14 @@
+/* ===========================================================
+ * FotoChest
+ * http://www.fotochest.com/
+ * http://dstegelman.github.com/fotochest/
+ * ===========================================================
+ *
+ * Author: Derek Stegelman
+ * Description: Administration Styles for FotoChest
+ *
+ * ========================================================== */
+
 a.brand img
 {
     margin-right: 6px;
