--- a/fotochest/photo_manager/static/photo_manager/css/custom.css
+++ b/fotochest/photo_manager/static/photo_manager/css/custom.css
@@ -1,3 +1,14 @@
+/* ===========================================================
+ * FotoChest
+ * http://www.fotochest.com/
+ * http://dstegelman.github.com/fotochest/
+ * ===========================================================
+ *
+ * Author: Derek Stegelman
+ * Description: Global Styles for FotoChest
+ *
+ * ========================================================== */
+
 /* Globals */
 
 body
