--- a/fotochest/photo_manager/templates/photo_manager/base.html
+++ b/fotochest/photo_manager/templates/photo_manager/base.html
@@ -5,23 +5,19 @@
     <title>{{ app_name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Derek Stegelman">
 
     <!-- Le styles -->
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}default/css/custom.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}photo_manager/css/custom.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ STATIC_URL }}slideshow/css/bootstrap-image-gallery.min.css"
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="{{ STATIC_URL }}bootstrap/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ STATIC_URL }}bootstrap/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ STATIC_URL }}bootstrap/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="{{ STATIC_URL }}bootstrap/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico">
     {% block extra_head %}{% endblock extra_head %}
   </head>
 
@@ -88,8 +84,6 @@
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-carousel.js"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-typeahead.js"></script>
-    <script src="{{ STATIC_URL }}slideshow/js/load-image.js"></script>
-    <script src="{{ STATIC_URL }}slideshow/js/bootstrap-image-gallery.min.js"></script>
     {% block extra_foot %}{% endblock extra_foot %}
   </body>
 </html>
