--- a/fotochest/administrator/templates/administrator/albums.html
+++ b/fotochest/administrator/templates/administrator/albums.html
@@ -92,15 +92,44 @@
             <td>{% if album.parent_album %}<span class="label label-success">Yes</span>{% else %}<span class="label label-important">No</span>{% endif %} </td>
             <td>{{ album.count }}</td>
             <td>
+                <!-- Add child album -->
+                <div class="modal hide fade" id="addPhotosToAlbum_{{ album.id }}">
+                    <div class="modal-header">
+                        <a data-dismiss="modal" class="close">×</a>
+                        <h3>Choose Location</h3>
+                    </div>
+                    <div class="modal-body">
+                        <h4>Select Location for photos in {{ album }}</h4>
+                        <p>Select the location that you want to associate you uploaded photos with.</p>
+                        <form method="GET" action="{% url choose %}">
+
+                            <input type='hidden' name='album' value='{{ album.slug }}'>
+                            <input type="hidden" name="user_id" value="{{ request.user.id }}">
+
+                            <label>Location</label>
+                            <select name="location">
+                                {% for location in form_locations %}
+                                <option value="{{ location.slug }}">{{ location }}</option>
+                                {% endfor %}
+                            </select>
+                    </div>
+                    <div class="modal-footer">
+                        <a data-dismiss="modal" class="btn" href="#">Close</a>
+                        <input type="submit" value="Proceed to Upload" class="btn btn-primary">
+
+                    </div>
+                    </form>
+                </div>
+
                 <div class="btn-group">
                     <button class="btn btn-primary">Actions</button>
                     <button class="btn dropdown-toggle btn-primary" data-toggle="dropdown">
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ album.get_admin_url }}">Edit</a></li>
+                        <li><a href="{% url admin_album_detail album_id=album.id %}">Edit</a></li>
                         <li><a href="#">View Photos</a></li>
-                        <li><a href="#chooseLocation" data-toggle="modal">Add Photos</a></li>
+                        <li><a href="#addPhotosToAlbum_{{ album.id }}" data-toggle="modal">Add Photos</a></li>
                         <!-- dropdown menu links -->
                         <li class="divider"></li>
                         <li><a href="#addChildAlbum_{{ album.id }}" data-toggle="modal">Add Child Album</a></li>
