--- a/fotochest/administrator/templates/administrator/base.html
+++ b/fotochest/administrator/templates/administrator/base.html
@@ -19,7 +19,7 @@
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico">
+    <link rel="shortcut icon" href="{{ STATIC_URL }}photo_manager/img/favicon.ico">
     {% block extra_head %}{% endblock extra_head %}
   </head>
 
@@ -127,29 +127,10 @@
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-alert.js"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-modal.js"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-dropdown.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-scrollspy.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-tab.js"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-tooltip.js"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-popover.js"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-button.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-carousel.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-typeahead.js"></script>
     <script src="{{ STATIC_URL }}administrator/js/admin.js"></script>
-  <script>
-      $(document).ready(function(){
-
-          $('.typeahead-album').typeahead({
-              source: [
-                      {% for album in form_albums %}
-          '{{ album.title }}',
-          {% endfor %}
-          ]
-
-      });
-      });
-
-  </script>
     {% block extra_foot %}{% endblock extra_foot %}
 
   </body>
