--- a/fotochest/administrator/templates/administrator/base.html
+++ b/fotochest/administrator/templates/administrator/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>FotoChest | Administration</title>
+    <title>{{ app_name }} | Administration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Photo, Album Management">
     <meta name="author" content="FotoChest Developers">
@@ -64,7 +64,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="{% url admin_dashboard %}"><img src="{{ STATIC_URL }}img/FotoChestLogoSmall.png" height="20" width="20">FotoChest</a>
+          <a class="brand" href="{% url admin_dashboard %}"><img src="{{ STATIC_URL }}img/FotoChestLogoSmall.png" height="20" width="20">{{ app_name }}</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="{% url admin_dashboard %}">Dashboard <span class="label label-info">{{ thumbnails_building }}</span></a></li>
