--- a/fotochest/photo_manager/templates/photo_manager/index.html
+++ b/fotochest/photo_manager/templates/photo_manager/index.html
@@ -73,7 +73,7 @@
 {% endif %}
 
 
-{% for photo in photos.object_list %}
+{% for photo in photos %}
     {% if forloop.counter == 1 or forloop.counter == 5 or forloop.counter == 9 %}
     <ul class="thumbnails row">
     {% endif %}
