--- a/fotochest/photo_manager/templates/photo_manager/location.html
+++ b/fotochest/photo_manager/templates/photo_manager/location.html
@@ -1,6 +1,6 @@
-{% extends "default/base.html" %}
+{% extends "photo_manager/base.html" %}
 {% block nav %}
-{% include "default/nav.html" with current=1 %}
+{% include "photo_manager/nav.html" with current=1 %}
 {% endblock nav %}
 {% block extra_head %}
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
@@ -84,11 +84,11 @@ rules: [
 <ul class="thumbnails">
 {% for photo in photos %}
     
-    {% include "default/snippets/smaller_item.html" %}
+    {% include "photo_manager/snippets/smaller_item.html" %}
     
 {% endfor %}
 </ul>
-{% include "default/snippets/pagination.html" %}
+{% include "photo_manager/snippets/pagination.html" %}
 
 </div>
 <div class="span4">
