--- a/fotochest/photo_manager/templates/photo_manager/photo.html
+++ b/fotochest/photo_manager/templates/photo_manager/photo.html
@@ -1,6 +1,6 @@
-{% extends "default/base.html" %}
+{% extends "photo_manager/base.html" %}
 {% block nav %}
-{% include "default/nav.html" with current=2 %}
+{% include "photo_manager/nav.html" with current=2 %}
 {% endblock nav %}
 {% block extra_head %}
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
