Other fixes from moving from app to website.

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
-{% extends "default/base.html" %}
+{% extends "photo_manager/base.html" %}
 {% block nav %}
-{% include "default/nav.html" with current=1 %}
+{% include "photo_manager/nav.html" with current=1 %}
 {% endblock nav %}
 {% block main_content %}
 
