--- a/templates/500.html
+++ b/templates/500.html
@@ -1,6 +1,6 @@
-{% extends "default/base.html" %}
+{% extends "photo_manager/base.html" %}
 {% block nav %}
-{% include "default/nav.html" with current=1 %}
+{% include "photo_manager/nav.html" with current=1 %}
 {% endblock nav %}
 {% block extra_head %}
 <style>
