--- a/apps/photo_manager/templates/photo_manager/photo.html
+++ b/apps/photo_manager/templates/photo_manager/photo.html
@@ -80,7 +80,7 @@ rules: [
 {% block main_content %}
 {% load comments %}
 
-			<div class="span8">
+			<div class="span8" id="photo-detail">
 			    <ul class="breadcrumb pull-right">
 			        <li>
 			            <a href="{% url homepage %}">Home</a> <span class="divider">/</span>
@@ -91,7 +91,7 @@ rules: [
 			        <li class="active">{{ photo.title }}</li>
 			    </ul>
 
-			<div class="btn-group photo-nav">
+			<div class="btn-group photo-nav pull-left">
 			    {% if photo.get_previous %}
 				<a href="{{ photo.get_previous }}" class="btn"><i class="icon-arrow-left"></i> Previous</a>
 				{% endif %}
