--- a/apps/photo_manager/templates/photo_manager/photo.html
+++ b/apps/photo_manager/templates/photo_manager/photo.html
@@ -115,7 +115,7 @@ rules: [
 				<div class="well">
 					<h3>{{ photo.title }}</h3>
 					<div id="small_map"></div>
-					<h6>By {{ photo.user.first_name }} {{ photo.user.last_name }}</h6>
+					<h6>By {{ photo.author }}</h6>
 					<a href="{{ photo.album.get_absolute_url }}">From {{ photo.album }}</a>
 					<p>This photo was uploaded on {{ photo.date_uploaded|date:"F j Y" }}, and taken in <a href="{% url photo_location location_slug=photo.location.slug %}">{{ photo.location.city }}, {{ photo.location.get_country_display }}</a>.</p>
 					<h4>Other photos from <a href="{% url photo_location location_slug=photo.location.slug %}">{{ photo.location }}</a></h4>
