--- a/templates/500.html
+++ b/templates/500.html
@@ -4003,7 +4003,7 @@ a.thumbnail:hover {
     <div class="hero-unit">
             <h1>500 System Error</h1>
             <p>We've encountered an error.  We've been notified and the error has been logged.</p>
-            <p><a href="{% url homepage %}" class="btn btn-primary btn-large">Return to Home</a></p>
+            <p><a href="{% url 'homepage' %}" class="btn btn-primary btn-large">Return to Home</a></p>
           </div>
 </div>
 {% endblock main_content %}
