--- a/apps/administrator/templates/administrator/base.html
+++ b/apps/administrator/templates/administrator/base.html
@@ -32,7 +32,7 @@
     <div class="modal-body">
       <h4>Select Album and Location</h4>
       <p>Select the album and location that you want to associate you uploaded photos with.</p>
-      <form method="GET" action="{% url choose %}">
+      <form method="GET" action="{% url 'choose' %}">
      <label>Album Name:</label>
       <select name="album">
           {% for album in form_albums %}
@@ -64,12 +64,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="{% url admin_dashboard %}"><img src="{{ STATIC_URL }}photo_manager/img/FotoChestLogoSmall.png" height="20" width="20">{{ app_name }}</a>
+          <a class="brand" href="{% url 'admin_dashboard' %}"><img src="{{ STATIC_URL }}photo_manager/img/FotoChestLogoSmall.png" height="20" width="20">{{ app_name }}</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="{% url admin_dashboard %}">Dashboard <span class="label label-info">{{ thumbnails_building }}</span></a></li>
+              <li class="active"><a href="{% url 'admin_dashboard' %}">Dashboard <span class="label label-info">{{ thumbnails_building }}</span></a></li>
               <li><a href="#myModal" data-toggle="modal">Add Photos</a></li>
-              <li><a target="_blank" href="{% url homepage %}">View Site</a></li>
+              <li><a target="_blank" href="{% url 'homepage' %}">View Site</a></li>
             </ul>
               <div class="btn-group pull-right">
                   <a href="#" data-toggle="dropdown" class="btn dropdown-toggle">
@@ -81,7 +81,7 @@
 
 
                       <li class="divider"></li>
-                      <li><a href="{% url logout %}">Logout</a></li>
+                      <li><a href="{% url 'logout' %}">Logout</a></li>
                   </ul>
               </div>
           </div><!--/.nav-collapse -->
