--- a/apps/administrator/templates/administrator/comment_list_view.html
+++ b/apps/administrator/templates/administrator/comment_list_view.html
@@ -31,7 +31,7 @@
         </div>
         <div class="modal-footer">
             <a href="#" class="btn" data-dismiss="modal">Close</a>
-            <a href="{% url comment_delete_view comment_id=comment.id %}" class="btn btn-danger">Delete Comment</a>
+            <a href="{% url 'comment_delete_view' comment_id=comment.id %}" class="btn btn-danger">Delete Comment</a>
         </div>
     </div>
     <tr>
