--- a/apps/administrator/templates/administrator/dashboard.html
+++ b/apps/administrator/templates/administrator/dashboard.html
@@ -74,9 +74,9 @@ $(document).ready(function () {
     </a>
     <div class="caption">
         <div class="controls">
-            <a href="{% url admin_rotate_right photo_id=photo.id %}" class="btn">Rotate Right</a>
-            <a href="{% url admin_rotate_left photo_id=photo.id %}" class="btn">Rotate Left</a>
-            <form method="POST" action="{% url admin_edit_photo photo_id=photo.id %}">
+            <a href="{% url 'admin_rotate_right' photo_id=photo.id %}" class="btn">Rotate Right</a>
+            <a href="{% url 'admin_rotate_left' photo_id=photo.id %}" class="btn">Rotate Left</a>
+            <form method="POST" action="{% url 'admin_edit_photo' photo_id=photo.id %}">
             {% csrf_token %}
 
             <input type="text" name="title" value="{{ photo.title }}" class="span2">
