--- a/apps/photo_manager/templates/photo_manager/index.html
+++ b/apps/photo_manager/templates/photo_manager/index.html
@@ -8,7 +8,7 @@
 {% if album_view %}
 <ul class="breadcrumb">
   <li>
-    <a href="{% url homepage %}">Home</a> <span class="divider">/</span>
+    <a href="{% url 'homepage' %}">Home</a> <span class="divider">/</span>
   </li>
   {% if album.parent_album %}
   <li>
@@ -21,7 +21,7 @@
 {% else %}
 <ul class="breadcrumb">
   <li class="active">
-    <a href="{% url homepage %}">Home</a>
+    <a href="{% url 'homepage' %}">Home</a>
   </li>
   
 </ul>
