--- a/apps/photo_manager/templates/photo_manager/nav.html
+++ b/apps/photo_manager/templates/photo_manager/nav.html
@@ -6,12 +6,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="{% url homepage %}">{{ app_name }}</a>
+      <a class="brand" href="{% url 'homepage' %}">{{ app_name }}</a>
       <div class="nav-collapse">
         <ul class="nav">
-          <li{% if current == 1 %} class="active"{% endif %}><a href="{% url homepage %}">Home</a></li>
-          <li{% if current == 2 %} class="active"{% endif %}><a href="{% url albums %}">Albums</a></li>
-          <li{% if current == 3 %} class="active"{% endif %}><a href="{% url map %}">Map</a></li>
+          <li{% if current == 1 %} class="active"{% endif %}><a href="{% url 'homepage' %}">Home</a></li>
+          <li{% if current == 2 %} class="active"{% endif %}><a href="{% url 'albums' %}">Albums</a></li>
+          <li{% if current == 3 %} class="active"{% endif %}><a href="{% url 'map' %}">Map</a></li>
         </ul>
         <form action="/search/" method="GET" class="navbar-search pull-right">
             <input type="text" name="q" placeholder="Search" class="search-query span2">
