--- a/apps/photo_manager/templates/photo_manager/photo.html
+++ b/apps/photo_manager/templates/photo_manager/photo.html
@@ -83,7 +83,7 @@ rules: [
 			<div class="span8" id="photo-detail">
 			    <ul class="breadcrumb pull-right">
 			        <li>
-			            <a href="{% url homepage %}">Home</a> <span class="divider">/</span>
+			            <a href="{% url 'homepage' %}">Home</a> <span class="divider">/</span>
 			        </li>
 			        <li>
 			            <a href="{{ photo.album.get_absolute_url }}">{{ photo.album }}</a> <span class="divider">/</span>
@@ -95,9 +95,9 @@ rules: [
 			    {% if photo.get_previous %}
 				<a href="{{ photo.get_previous }}" class="btn"><i class="icon-arrow-left"></i> Previous</a>
 				{% endif %}
-				<a href="{% url photo_fullscreen album_slug=photo.album.slug photo_slug=photo.slug %}" class="btn"><i class="icon-picture"></i> Full Screen</a>
+				<a href="{% url 'photo_fullscreen' album_slug=photo.album.slug photo_slug=photo.slug %}" class="btn"><i class="icon-picture"></i> Full Screen</a>
 				{% if enable_download %}
-				<a href="{% url photo_download photo_id=photo.id %}" class="btn"><i class="icon-download-alt"></i> Download Full Size</a>
+				<a href="{% url 'photo_download' photo_id=photo.id %}" class="btn"><i class="icon-download-alt"></i> Download Full Size</a>
 				{% endif %}
 				{% if photo.get_next %}
 				<a href="{{ photo.get_next }}" class="btn">Next <i class="icon-arrow-right"></i></a>
@@ -117,8 +117,8 @@ rules: [
 					<div id="small_map"></div>
 					<h6>By {{ photo.author }}</h6>
 					<a href="{{ photo.album.get_absolute_url }}">From {{ photo.album }}</a>
-					<p>This photo was uploaded on {{ photo.date_uploaded|date:"F j Y" }}, and taken in <a href="{% url photo_location location_slug=photo.location.slug %}">{{ photo.location.city }}, {{ photo.location.get_country_display }}</a>.</p>
-					<h4>Other photos from <a href="{% url photo_location location_slug=photo.location.slug %}">{{ photo.location }}</a></h4>
+					<p>This photo was uploaded on {{ photo.date_uploaded|date:"F j Y" }}, and taken in <a href="{% url 'photo_location' location_slug=photo.location.slug %}">{{ photo.location.city }}, {{ photo.location.get_country_display }}</a>.</p>
+					<h4>Other photos from <a href="{% url 'photo_location' location_slug=photo.location.slug %}">{{ photo.location }}</a></h4>
 					
 					
 					<ul class="thumbnails">
