Remove private photos feature, fix issue with album cover.

--- a/apps/photo_manager/templates/photo_manager/index.html
+++ b/apps/photo_manager/templates/photo_manager/index.html
@@ -44,7 +44,7 @@
 		            {% else %}
 		                {% if album.get_album_cover %}
 		                    {% load thumbnail %}
-		            {% thumbnail album.get_album_cover.image "300x220" as im %}
+		            {% thumbnail album.album_cover.image "300x220" as im %}
 		        <img src="{{ im.url }}">
 		            {% endthumbnail %}
 		                {% else %}
