--- a/apps/administrator/templates/administrator/album_detail.html
+++ b/apps/administrator/templates/administrator/album_detail.html
@@ -13,10 +13,10 @@
   
     <ul class="thumbnails">
             <li class="span4">
-              {% if album.get_album_cover.image %}
+              {% if album.album_cover.image %}
               <a class="thumbnail" href="#">
               {% load thumbnail %}
-              {% thumbnail album.get_album_cover.image "360x268" crop="center" as im %}
+              {% thumbnail album.album_cover.image "360x268" crop="center" as im %}
                   <img src="{{ im.url }}">
               {% endthumbnail %}
               {% endif %}
