--- a/apps/administrator/templates/administrator/dashboard.html
+++ b/apps/administrator/templates/administrator/dashboard.html
@@ -147,23 +147,19 @@ $(document).ready(function () {
     </ul>
     {% endif %}
 {% endfor %}
-{% if paginated %}
+{% if is_paginated %}
 <div class="pagination">
     <ul>
-        {% if photos.has_previous %}
-        <li><a href="?page={{ photos.previous_page_number }}">Prev</a></li>
+        {% if page_obj.has_previous %}
+        <li><a href="?page={{ page_obj.previous_page_number }}">Prev</a></li>
         {% endif %}
-        {% if photos.previous_page_number %}
-        <li><a href="?page={{ photos.previous_page_number }}">{{ photos.previous_page_number }}</a></li>
-        {% endif %}
+
         <li class="active">
-            <a href="#">{{ photos.number }}</a>
+            <a href="#">{{ page_obj.number }}</a>
         </li>
-        {% if photos.next_page_number %}
-        <li><a href="?page={{ photos.next_page_number }}">{{ photos.next_page_number }}</a></li>
-        {% endif %}
-        {% if photos.has_next %}
-        <li><a href="?page={{ photos.next_page_number }}">Next</a></li>
+        
+        {% if page_obj.has_next %}
+        <li><a href="?page={{ page_obj.next_page_number }}">Next</a></li>
         {% endif %}
     </ul>
 </div>
